git-svn-id: http://svn.vdombox.ru/flextools/trunk@7404 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/components/VDOMScroller.mxml
+++ b/IDE/v.02/common/src/net/vdombox/components/VDOMScroller.mxml
@@ -13,7 +13,10 @@
 			{
 				event.stopImmediatePropagation();
 				
-				verticalScrollBar.viewport.verticalScrollPosition -= event.delta;
+				if ( event.shiftKey )
+					horizontalScrollBar.viewport.horizontalScrollPosition -= event.delta;
+				else
+					verticalScrollBar.viewport.verticalScrollPosition -= event.delta;
 			}
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
