--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -17,8 +17,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.modules.tree.events.WorkAreaEvent;
-			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
-			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 
 			private var isExpanded : Boolean;
 
@@ -70,8 +70,14 @@
 			protected function scroller_creationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
-				scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
-				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMHScrollBarSkin );
+				scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
+				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+			}
+			
+			private function mouseWheelHandler( event : MouseEvent ) : void
+			{
+				event.delta = event.delta > 0 ? 20 : -20;
 			}
 			
 		]]>
