edit scroll skin
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7419 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
@@ -11,6 +11,9 @@
 			import mx.binding.utils.BindingUtils;
 			import mx.binding.utils.ChangeWatcher;
 			import mx.events.ResizeEvent;
+			
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 
 
 			private var hcw : ChangeWatcher;
@@ -35,6 +38,9 @@
 				addEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler, false, 0, true );
 				addEventListener( Event.RESIZE, resizeHandler, false, 0, true );
 				addEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler, false, 0, true );
+				
+				hsb.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
+				vsb.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
 
 				if ( scriptAreaComponent )
 				{
