new version of tinyMCE added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7421 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
@@ -122,16 +122,8 @@
 					}
 				}
 				
-				if( currentToolbar )
-				{
-					visible = true;
-					includeInLayout = true;
-				}
-				else
-				{
-					visible = false;
-					includeInLayout = false;
-				}
+				visible = currentToolbar ? true : false;
+				includeInLayout = currentToolbar ? true : false;
 			}
 			
 			private function toolbarChageHandle( event : Event ) : void
@@ -143,7 +135,21 @@
 					
 					dispatchEvent( editorEvent );
 			}
-				
+			
+			public function refresh() : void 
+			{
+				trace ('ToolbarPanel refresh: _currentToolbar = ' + _currentToolbar);
+				if (currentToolbar)
+					currentToolbar.refresh(_selectedRenderer);
+			}
+			
+			public function saveProperties():void
+			{
+				trace ('ToolbarPanel saveProperties');
+				if (currentToolbar)
+					currentToolbar.saveValue();
+			}
+			
 		]]>
 	</fx:Script>
 </s:SkinnableContainer>
