--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ModalDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ModalDialog.mxml
@@ -2,7 +2,7 @@
 <SuperWindow xmlns="ExtendedAPI.com.containers.*" 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	width="400" height="300" visible="true"
-	titleIcon="@Embed(source='assets/icons/icon_16.png')"  
+	titleIcon="@Embed(source='/assets/icons/icon_16.png')"
 	startPosition="centerParent" 
 	alwaysInFront="false"
 	modal="true"
