--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -36,9 +36,13 @@
 				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
 				
 				var listValues : Array = [];
-				var selectedItem : Object = {};
 				
-				var objectListVO : ObjectListVO;
+				var objectListVO : ObjectListVO = new ObjectListVO();
+				objectListVO.id = "";
+				objectListVO.name = "";
+				comboBoxData.addItem( objectListVO );
+				var selectedItem : Object = objectListVO;
+				
 				for each ( objectListVO in _interface )
 				{
 					comboBoxData.addItem( objectListVO  );
@@ -46,12 +50,13 @@
 					if ( element == objectListVO.id )
 						selectedItem = objectListVO;
 				}
-				/*if ( comboBoxData )
+
+				if ( comboBoxData )
 				{
 					comboBoxData.sort = new Sort();
-					comboBoxData.sort.fields = [ new SortField( "name", true ), new SortField("label",true) ];
+					comboBoxData.sort.fields = [ new SortField( "name", true ) ];
 					comboBoxData.refresh();
-				}*/
+				}
 				
 				valueField.dataProvider = comboBoxData;
 				valueField.selectedItem = selectedItem;
