Add avto updata in DataTableEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7437 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -386,9 +386,9 @@
 				var columnIndex:int = 0;
 				for each ( var dgColumn:DataGridColumn in dataGridColumns ) 
 				{
-					if ( dataGridColumnsProps[columnIndex].autoincrement.toLowerCase() == 'false' ) 
+					if ( !dataGridColumnsProps[columnIndex].aincrement ) 
 					{
-						if ( dataGridColumnsProps[columnIndex].notnull.toLowerCase() == 'true' )
+						if ( dataGridColumnsProps[columnIndex].notnull )
 							tableRow[ dgColumn.dataField ] = 'REQUIRED';
 						else
 							tableRow[ dgColumn.dataField ] = 'NULL';
@@ -446,8 +446,12 @@
 			private function queueCommitCompleteHandler( event : QueueEvent ) : void 
 			{
 				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueCommitCompleteHandler );
+				updateTable();
+			}
+			
+			public function updateTable() : void
+			{
 				commit.enabled = false;
-				//__alertArea.selectedChild = __normal;
 				updateQueueLength();
 				
 				/* ReRequest rows count */
@@ -482,7 +486,7 @@
 				if ( event.currentTarget.itemEditorInstance.text != editableValue ) 
 				{
 					/* check entered data over database integrity */
-					if ( dataGridColumnsProps[ event.columnIndex ][ 'autoincrement' ].toLowerCase() == 'true' ) 
+					if ( dataGridColumnsProps[ event.columnIndex ][ 'aincrement' ] ) 
 					{
 						event.currentTarget.itemEditorInstance.text = editableValue;
 					} 
