--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
@@ -10,6 +10,7 @@
 			import mx.utils.UIDUtil;
 			
 			import net.vdombox.ide.common.vo.ObjectVO;
+			import net.vdombox.ide.modules.dataBase.events.DataTablesEvents;
 			import net.vdombox.ide.modules.dataBase.events.QueueEvent;
 			import net.vdombox.ide.modules.dataBase.model.vo.StructureVO;
 			import net.vdombox.ide.modules.dataBase.view.components.Queue.QueueManager;
@@ -63,16 +64,12 @@
 				queue = new QueueManager( manager );
 				queue.reset();
 				
-				//manager.addEventListener( "callComplete", getTableStructureHandler );
-				
 				queue.addRequest(UIDUtil.createUID(), 'get_structure', '', getTableStructureHandler, null);
 				queue.execute();
 			}
 			
 			private function getTableStructureHandler( event : * ) : void 
 			{
-				
-				/* Applying structure data after 'get_structure' remote method */
 				var queryResult : XML = new XML( event.Result );
 				tableStructure = new XML( queryResult.tablestructure );		
 				
@@ -91,6 +88,8 @@
 				}
 				
 				dataTable.dataProvider = columnsProvider;
+				
+				dispatchEvent( new DataTablesEvents ( DataTablesEvents.UPDATE_STRUCTURE ) );
 			}
 			
 			private function findRecordInOldDataProvider( structureID : String ) : StructureVO
@@ -143,31 +142,18 @@
 						queue.addRequest( UIDUtil.createUID(), "add_column", requestXML.toXMLString(), null, null) ;
 					}
 				}
+				
+				queue.addEventListener( QueueEvent.QUEUE_COMPLETE, queueCommitCompleteHandler );
 				queue.execute();
 			}
 			
 			private function queueCommitCompleteHandler( event : QueueEvent ) : void 
 			{
 				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueCommitCompleteHandler );
-				//commit.enabled = false;
-				//__alertArea.selectedChild = __normal;
-				//updateQueueLength();
+				queue.reset();
+				queue.addRequest(UIDUtil.createUID(), 'get_structure', '', getTableStructureHandler, null);
 				
-				/* ReRequest rows count */
-				/*queue.reset();
-				queue.addRequest( "callComplete", getTableStructureHandler );
-				queue.addRequest( UIDUtil.createUID(), 'get_count', '', countResponseHandler, null );
-				
-				/* ReRequest page */
-				/*queue.addRequest(
-					UIDUtil.createUID(),
-					'get_data',
-					'<range><limit>' + AMOUNT.toString() + '</limit><offset>' + String(AMOUNT * currentPage) + '</offset></range>',
-					refreshDataGrid, null);
-				
-				verticalScrollPositionStore = dataTable.verticalScrollPosition;
-				
-				queue.execute();*/
+				queue.execute();
 			}
 			
 			private function addBtnHandler() : void 
@@ -240,6 +226,14 @@
 				selectedItem = dataTable.selectedItem as StructureVO;
 			}
 			
+			private function discardChanges() : void 
+			{
+				//__applyBtn.enabled = false;
+				queue.reset();
+				queue.addRequest(UIDUtil.createUID(), 'get_structure', '', getTableStructureHandler, null);
+				queue.execute();
+			}
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -250,7 +244,7 @@
 					 sortableColumns="false" editable="true" change="dataTable_changeHandler(event)">
 			<mx:columns>
 				<mx:DataGridColumn dataField="name" headerText="Name"/>
-				<mx:DataGridColumn dataField="type" headerText="Type"/>
+				<mx:DataGridColumn dataField="type" headerText="Type" itemRenderer="net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.DropDownItemRenderers"/>
 				
 				<mx:DataGridColumn dataField="primary" headerText="Primary key" editable="false">
 					<mx:itemRenderer>
@@ -294,13 +288,15 @@
 				</s:fill>
 			</s:Rect>
 			
-			<s:HGroup width="100%" height="20" horizontalAlign="left" verticalAlign="middle" paddingLeft="10">
+			<s:HGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="10">
 			
 				<s:Button id="commit" label="commit" click="applyBtnClickHandler()" />
 			
 				<s:Button id="addNew" label="add" click="addBtnHandler()" />
 			
 				<s:Button id="delete" label="delete" click="removeBtnHandler()" />
+				
+				<s:Button id="discard" label="discard" click="discardChanges()" />
 			</s:HGroup>
 		</s:Group>
 	</s:VGroup>
