--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -8,7 +8,7 @@
 		  paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" xmlns:mx1="library://ns.adobe.com/flex/mx">
 
 	<components:WorkArea id="workArea"
-						 height="100%" width="100%" />
+						 height="100%" width="100%" minWidth="400" />
 
 	<mx1:VDividedBox height="100%" width="220">
 
