--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -218,8 +218,16 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	<s:VGroup width="100%" height="100%">
+		<mx:Tree id="tablesTree" width="100%" height="100%"
+				 dataProvider="{ _dataBases }" labelField="@name" />
+		
+		<s:HGroup width="100%" height="20" verticalAlign="middle" horizontalAlign="center">
+			
+			<s:Button id="addBase" label="Add Base" />
+			
+		</s:HGroup>
+	</s:VGroup>
 	
-	<mx:Tree id="tablesTree" width="100%" height="100%"
-			 dataProvider="{ _dataBases }" labelField="@name" />
 	
 </s:Group>
