--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -58,17 +58,15 @@
 				return _objectVO ? _objectVO.name : "";
 			}
 			
-			public function get objectVO() : ObjectVO
+			public function get objectVO() : Object
 			{
 				return _objectVO ? _objectVO : null;
 			}
 			
-			public function set objectVO( value : ObjectVO ) : void
+			public function set objectVO( value : Object ) : void
 			{
-				_objectVO = value;
+				_objectVO = value as ObjectVO;
 			}
-
-			
 			
 			// Table
 			
