--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableQuery.mxml
@@ -8,10 +8,13 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
+			import mx.controls.dataGridClasses.DataGridColumn;
 			import mx.utils.UIDUtil;
 			
 			import net.vdombox.ide.common.vo.PageVO;
 			import net.vdombox.ide.modules.dataBase.events.QueueEvent;
+			import net.vdombox.ide.modules.dataBase.model.vo.StructureVO;
+			import net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.TextInputItemRenderers;
 			import net.vdombox.ide.modules.dataBase.view.components.Queue.QueueManager;
 			
 			private var _objectVO : PageVO;
@@ -19,6 +22,10 @@
 			private var manager : *;
 			private var queue : QueueManager;
 			private var queryResult:XML;
+			private var tableStructureXML:XML;
+			private var page:XML; /* of XML */
+			private var dataGridColumns:Array = [];
+			private var dataGridColumnsProps:Array = [];
 			
 			[Bindable]
 			private var dataGridProvider:ArrayCollection = new ArrayCollection();
@@ -64,8 +71,9 @@
 				// TODO Auto-generated method stub
 				var textQuery : String = query.text;
 				queue.addRequest( UIDUtil.createUID(), "execute_query_xml",
-					'<query_sql>' + textQuery + '</query_sql>', writeQueryResultOnDataGrid, writeQueryErrorOnDataGrid );
+					'<query_sql>' + textQuery + '</query_sql>', writeQueryResultOnDataGrid, queueERRORHandler );
 				queue.addEventListener( QueueEvent.QUEUE_COMPLETE, queueOnLoadCompleteHandler );
+				queue.addEventListener( QueueEvent.UNKNOWN_ERROR, queueERRORHandler );
 				queue.execute();
 			}
 			
@@ -74,6 +82,12 @@
 				try 
 				{
 					queryResult = new XML( message );	
+					tableStructureXML = new XML( queryResult.queryresult.table.header );
+					
+					setTableHeaders();
+					page = new XML(queryResult.queryresult.table.data );
+					
+					showPageData();
 				}
 				catch ( err : Error ) 
 				{ 
@@ -81,23 +95,65 @@
 				}
 			}
 			
-			private function writeQueryErrorOnDataGrid( message : String ) : void 
+			private function setTableHeaders():void 
 			{
-				try 
+				
+				dataGridColumns = [];
+				for each (var xmlHeader:XML in tableStructureXML.column) 
 				{
-					queryResult = new XML( message );	
+					var _header:DataGridColumn = new DataGridColumn();
+					var columnProps : StructureVO = new StructureVO( xmlHeader );
+					
+					dataGridColumnsProps.push( columnProps );
+					_header.dataField = xmlHeader.@name;
+					_header.sortable = true;
+					_header.itemRenderer = new ClassFactory( TextInputItemRenderers );
+					
+					dataGridColumns.push( _header );
+					
 				}
-				catch ( err : Error ) 
-				{ 
-					return;	
+				dataTable.columns = dataGridColumns;
+				
+			}
+			
+			private function showPageData() : void 
+			{
+				
+				/* Show current page */
+				dataGridProvider = new ArrayCollection();
+				for each ( var xmlRow:XML in page.row ) 
+				{
+					/* Create tableRow object */
+					var tableRow:Object = new Object();
+					var cellIndex:int = 0;
+					for each ( var xmlCell:XML in xmlRow.cell ) 
+					{
+						tableRow[ dataGridColumns[ cellIndex ].dataField ] = xmlCell.toString();
+						cellIndex++;
+					}
+					
+					tableRow["fnew"] = false;
+					tableRow["changed"] = false;
+					tableRow["GUID"] = UIDUtil.createUID(); 
+					dataGridProvider.addItem( tableRow );
 				}
+				
 			}
 			
 			private function queueOnLoadCompleteHandler( message : String ) : void 
 			{
 				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueOnLoadCompleteHandler );
-				//__alertArea.selectedChild = __normal;
-				//updateQueueLength();
+				queue.removeEventListener( QueueEvent.UNKNOWN_ERROR, queueERRORHandler );
+				errorWriter.text = "Success";
+			}
+			
+			private function queueERRORHandler( event : QueueEvent ) : void 
+			{
+				queue.removeEventListener( QueueEvent.QUEUE_COMPLETE, queueOnLoadCompleteHandler );
+				queue.removeEventListener( QueueEvent.UNKNOWN_ERROR, queueERRORHandler );
+				errorWriter.text = event.message;	
+				queue.reset();
+				dataGridProvider = null;
 			}
 			
 		]]>
@@ -108,9 +164,6 @@
 	</fx:Declarations>
 	
 	<s:VGroup width="100%" height="100%">
-		<mx:DataGrid id="dataTable" dataProvider="{dataGridProvider}"
-					 width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"
-					 editable="false" sortableColumns="false" />
 		
 		<s:Group width="100%" height="100">
 			
@@ -118,11 +171,24 @@
 				
 				<s:TextArea id="query" width="100%" height="100%" />
 				
-				<s:Button id="sendQuery" click="sendQuery_clickHandler(event)" />
+				<s:HGroup width="100%" height="20" horizontalAlign="right" verticalAlign="middle" paddingRight="10">
+					
+					<s:Button id="sendQuery" label="send query" click="sendQuery_clickHandler(event)"/>
+					
+				</s:HGroup>
+				
+				
+				<s:TextInput id="errorWriter" width="100%" editable="false" />
 				
 			</s:VGroup>
 			
 		</s:Group>
+		
+		<mx:DataGrid id="dataTable" dataProvider="{dataGridProvider}"
+					 width="100%" height="100%" horizontalScrollPolicy="auto" verticalScrollPolicy="auto"
+					 editable="false" sortableColumns="false" />
+		
+		
 		
 	</s:VGroup>
 	
